FIX Changed name that appears in the events for the actual location name

--- a/getEAP_TLS/getEAP_TLS/templates/getEAP_TLS/email/register_email.html
+++ b/getEAP_TLS/getEAP_TLS/templates/getEAP_TLS/email/register_email.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div class="event-container">
-  <h1 class="event-title">Casa</h1>
+  <h1 class="event-title">{{ location.name }}</h1>
   
   <div class="event-details">
     <ul class="details-list">
