--- a/getEAP_TLS/getEAP_TLS/templates/getEAP_TLS/wifilocation/wifi_network_locations_list.html
+++ b/getEAP_TLS/getEAP_TLS/templates/getEAP_TLS/wifilocation/wifi_network_locations_list.html
@@ -7,8 +7,8 @@
 {% endblock %}
 
 {% block content %}
-<h1 class="event-title">Events</h1>
-<div class="container">
+<!-- <h1 class="event-title">Events</h1> -->
+<div class="custom-container">
     {% for location in locations %}
       <div class="event-container hover-card">
         <a href="{% url 'wifi_location_details' location.location_uuid %}" class="text-decoration-none">
@@ -16,24 +16,7 @@
             <div class="event-details">
 
               <ul class="details-list">
-                {% if location.location %}
-                <li>
-                  <span class="detail-label">Location:</span> 
-                  <span class="detail-value">{{ location.location }}</span>
-                </li>
-                {% endif %}
-                {% if location.start_date %}
-                <li>
-                  <span class="detail-label">Start Date:</span> 
-                  <span class="detail-value">March 29, 2025</span>
-                </li>
-                {% endif %}
-                {% if location.end_date %}
-                <li>
-                  <span class="detail-label">End Date:</span> 
-                  <span class="detail-value">March 29, 2035</span>
-                </li>
-                {% endif %}
+                {% include 'getEAP_TLS/common/event_details_always_present.html' %}
               </ul>
             </div>  
           </div>
