--- a/getEAP_TLS/getEAP_TLS/templates/getEAP_TLS/wifilocation/wifi_network_locations_list.html
+++ b/getEAP_TLS/getEAP_TLS/templates/getEAP_TLS/wifilocation/wifi_network_locations_list.html
@@ -1,9 +1,10 @@
 {% extends 'base.html' %}
 
 {% block breadcrumb %}
-<ol class="breadcrumb">
-    <li class="breadcrumb-item active" aria-current="page">Events</li>
-</ol>
+<ul class="breadcrumb">
+  <li><a href="/">Home</a></li>
+  <li class="active">Active Events</li>
+</ul>
 {% endblock %}
 
 {% block content %}
