--- a/getEAP_TLS/getEAP_TLS/templates/getEAP_TLS/wifiuser/register.html
+++ b/getEAP_TLS/getEAP_TLS/templates/getEAP_TLS/wifiuser/register.html
@@ -1,13 +1,13 @@
 {% extends 'base.html' %}
 
 {% block breadcrumb %}
-<ol class="breadcrumb">
-    <li class="breadcrumb-item"><a href="{% url 'events' %}">Events</a></li>
-    <li class="breadcrumb-item"><a href="{% url 'wifi_location_details' event.location_uuid %}">{{ event.name }}</a></li>
-    <li class="breadcrumb-item active" aria-current="page">Register</li>
-</ol>
+<ul class="breadcrumb">
+    <li><a href="/">Home</a></li>
+    <li><a href="{% url 'events' %}">Active Events</a></li>
+    <li><a href="{% url 'wifi_location_details' location_uuid=event.location_uuid %}">{{ event.name }}</a></li>
+    <li class="active">Registration</li>
+</ul>
 {% endblock %}
-
 {% block content %}
 <div class="event-container">
   <h1 class="event-title">{{ event.name }}</h1>
