--- a/getEAP_TLS/getEAP_TLS/templates/getEAP_TLS/common/event_details.html
+++ b/getEAP_TLS/getEAP_TLS/templates/getEAP_TLS/common/event_details.html
@@ -1,4 +1,4 @@
-<h1 class="event-title">{{ location.name }}</h1>
+{% include 'getEAP_TLS/common/event_header.html' %}
 <div class="event-details">
     <ul class="details-list">
         {% include 'getEAP_TLS/common/event_details_always_present.html' %}
