--- a/getEAP_TLS/getEAP_TLS/templates/getEAP_TLS/wifilocation/wifi_location_details.html
+++ b/getEAP_TLS/getEAP_TLS/templates/getEAP_TLS/wifilocation/wifi_location_details.html
@@ -4,7 +4,15 @@
 <div class="event-container">  
   {% include 'getEAP_TLS/common/event_details.html' %}
   <div class="submit-row text-center mb-4">
-    <button type="button" class="my-button" onclick="window.location.href='register';">Register for the event</button>
+    {% if location.is_registration_open %} 
+      {% if location.form_link %}
+        <button type="button" class="my-button" onclick="window.location.href='{{ location.form_link }}'">Register for the event</button>
+      {% else %}
+        <button type="button" class="my-button" onclick="window.location.href='register';">Register for the event</button>
+      {% endif %}
+    {% else %}
+      <button type="button" class="my-button" disabled>Registration is closed</button>
+    {% endif %}
   </div> 
 </div>
 
