--- a/getEAP_TLS/getEAP_TLS/templates/getEAP_TLS/wifilocation/wifi_network_locations_list.html
+++ b/getEAP_TLS/getEAP_TLS/templates/getEAP_TLS/wifilocation/wifi_network_locations_list.html
@@ -1,23 +1,29 @@
 {% extends 'base.html' %}
 
 {% block content %}
-<!-- <h1 class="event-title">Events</h1> -->
 <div class="custom-container">
     {% for location in locations %}
-      <div class="event-container hover-card">
-        <a href="{% url 'wifi_location_details' location.location_uuid %}" class="text-decoration-none">
-            <h2 class="event-title">{{ location.name }}</h2>
+      {% if location.is_visible_in_web %} 
+        <div class="event-container hover-card">
+          <a href="{% url 'wifi_location_details' location.location_uuid %}" class="text-decoration-none">
+            {% include 'getEAP_TLS/common/event_header.html' %}
             <div class="event-details">
-
               <ul class="details-list">
                 {% include 'getEAP_TLS/common/event_details_always_present.html' %}
+                {% if location.brief_description %}
+                <li>
+                  <div class="label-container">
+                      <span class="detail-icon">📝</span>
+                      <span class="detail-label">Brief Description:</span>
+                  </div>
+                  <span class="detail-value">{{ location.brief_description }}</span>
+                </li>
+                {% endif %}
               </ul>
             </div>  
-          </div>
-          <div class="submit-row text-center mb-4">
-        </a>
-      </div>
-    </div>
+          </a>
+        </div>
+      {% endif %}
     {% endfor %}
   </div>
 {% endblock %}
