--- a/mywifipass/mywifipass/static/css/styles.css
+++ b/mywifipass/mywifipass/static/css/styles.css
@@ -62,6 +62,12 @@ body {
     
 }
 
+h2 {
+    color: var(--primary-color);
+    font-size: 2.5rem;
+    font-weight: bold;
+}
+
 .event-title {
     color: var(--primary-color);
     margin: 0;
