--- a/mywifipass/mywifipass/templates/mywifipass/email/register_email.html
+++ b/mywifipass/mywifipass/templates/mywifipass/email/register_email.html
@@ -11,7 +11,7 @@
   <!-- QR and URL for the pass -->
     <div class="qr-code">
       <img src="{{ qr_code_url }}" alt="QR Code" style="width: 200px; height: 200px;"/>
-      <p>Scan to register</p>
-      <p>or visit: <a href="{{ pass_url }}">{{ pass_url }}</a></p>  
+      <p>Scan this QR in MyWifiPass App to save your event pass</p>
+      <p>or paste this link in the App: <a href="{{ pass_url }}">{{ pass_url }}</a></p>  
 </div>
 {% endblock %}
