DEV Changed "event" word for "network" in visible stuff

--- a/mywifipass/mywifipass/templates/mywifipass/wifiuser/confirmation.html
+++ b/mywifipass/mywifipass/templates/mywifipass/wifiuser/confirmation.html
@@ -5,8 +5,8 @@
   <h2>Registration Complete!</h2>
   <div class = "detail-value">
     Your registration was successful.<br>
-    Please check your email to download your event pass.<br>
-    Open the app and show the pass at the event to get Wi-fi connection.
+    Please check your email to download your wifi pass.<br>
+    Open the app and show the pass at the location to get Wi-fi connection.
   </div>
 </div>
 {% endblock %}
