--- a/mywifipass/mywifipass/templates/base.html
+++ b/mywifipass/mywifipass/templates/base.html
@@ -6,7 +6,7 @@
     <title>{% block title %}My Website{% endblock %}</title>
     {% load static %}
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="{% static 'css/styles.css' %}" rel="stylesheet">
+    {% include 'styles.html' %}
 </head>
 <body>
     {% block header %}
