(#41) DEV Deleted unnecesary stuff from vibe coding and email is in spanish

--- a/mywifipass/mywifipass/templates/mywifipass/email/email_event_details.html
+++ b/mywifipass/mywifipass/templates/mywifipass/email/email_event_details.html
@@ -9,7 +9,7 @@
         <li>
             <div class="label-container">
                 <span class="detail-icon">📝</span>
-                <span class="email-detail-label">Description:</span>
+                <span class="email-detail-label">Descripción:</span>
             </div>
             <span class="email-detail-value">{{ location.description }}</span>
         </li>
