--- a/mywifipass/mywifipass/templates/mywifipass/email/email_event_details_always_present.html
+++ b/mywifipass/mywifipass/templates/mywifipass/email/email_event_details_always_present.html
@@ -11,7 +11,7 @@
 <li>
     <div class="label-container">
         <span class="detail-icon">🗓️</span>
-        <span class="email-detail-label">Start Date:</span>
+        <span class="email-detail-label">Válido desde:</span>
     </div>
     <span class="email-detail-value">{{ location.start_date }}</span>
 </li>
@@ -20,7 +20,7 @@
 <li>
     <div class="label-container">
         <span class="detail-icon">🏁</span>
-        <span class="email-detail-label">End Date:</span>
+        <span class="email-detail-label">Válido hasta:</span>
     </div>
     <span class="email-detail-value">{{ location.end_date }}</span>
 </li>
