(#41) DEV Improved email looks

--- a/mywifipass/mywifipass/templates/mywifipass/email/email_event_details.html
+++ b/mywifipass/mywifipass/templates/mywifipass/email/email_event_details.html
@@ -1,5 +1,5 @@
-<div class = "event-header"> 
-    <h1 class="email-event-title">{{ location.name }}</h1>
+<div class = "event-header" style="text-align:center;">
+    <h1 class="email-event-title" style="margin:0 auto; text-align:center;">{{ location.name }}</h1>
 </div>        
 <div class="event-details">
     <ul class="details-list">
