(#41) DEV Last changes for usability test

--- a/mywifipass/mywifipass/templates/mywifipass/email/email_event_details.html
+++ b/mywifipass/mywifipass/templates/mywifipass/email/email_event_details.html
@@ -7,11 +7,11 @@
 
         {% if location.description %}
         <li>
-            <div class="label-container">
+            <!-- <div class="label-container">
                 <span class="detail-icon">📝</span>
                 <span class="email-detail-label">Descripción:</span>
-            </div>
-            <span class="email-detail-value">{{ location.description }}</span>
+            </div> -->
+            <span class="email-detail-value" style="margin-left:3px; margin-right:3px;">{{ location.description }}</span>
         </li>
         {% endif %}
     </ul>
