--- a/mywifipass/mywifipass/templates/mywifipass/common/event_details.html
+++ b/mywifipass/mywifipass/templates/mywifipass/common/event_details.html
@@ -1,3 +1,7 @@
+<!-- Copyright (c) 2025, Pablo Diz de la Cruz -->
+<!-- All rights reserved. -->
+<!-- Licensed under the BSD 3-Clause License. See LICENSE file in the project root for full license information. -->
+
 {% include 'mywifipass/common/event_header.html' %}
 <div class="event-details">
     <ul class="details-list">
