--- a/mywifipass/mywifipass/templates/mywifipass/common/event_header.html
+++ b/mywifipass/mywifipass/templates/mywifipass/common/event_header.html
@@ -1,3 +1,7 @@
+<!-- Copyright (c) 2025, Pablo Diz de la Cruz -->
+<!-- All rights reserved. -->
+<!-- Licensed under the BSD 3-Clause License. See LICENSE file in the project root for full license information. -->
+
 <div class = "event-header"> 
     {% if location.logo %}
     <img src="{{ location.logo.url }}" alt="{{ location.name }}" class="event-icon">
