--- a/mywifipass/mywifipass/templates/mywifipass/email/email_event_details.html
+++ b/mywifipass/mywifipass/templates/mywifipass/email/email_event_details.html
@@ -1,3 +1,7 @@
+<!-- Copyright (c) 2025, Pablo Diz de la Cruz -->
+<!-- All rights reserved. -->
+<!-- Licensed under the BSD 3-Clause License. See LICENSE file in the project root for full license information. -->
+
 <div class = "event-header" style="text-align:center;">
     <h1 class="email-event-title" style="margin:0 auto; text-align:center;">{{ location.name }}</h1>
 </div>        
