--- a/mywifipass/mywifipass/templates/styles.html
+++ b/mywifipass/mywifipass/templates/styles.html
@@ -1,3 +1,7 @@
+<!-- Copyright (c) 2025, Pablo Diz de la Cruz -->
+<!-- All rights reserved. -->
+<!-- Licensed under the BSD 3-Clause License. See LICENSE file in the project root for full license information. -->
+
 <style>
     /*IMPORTANT NOTICE: For email styles, some styles are hardcoded, as some clients as 
     GMail's didn't accept variables*/
